# lumina-framework

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.txt  compile_flags.txt
cmake/: eecsConfig.cmake.in  luminaConfig.cmake.in  vestaConfig.cmake.in
scripts/: install-linux-unix.sh  install-macos-arm.sh  install.sh
source/eecs/: eecs.hpp
source/eecs/meta/: type_index.hpp
source/eecs/structures/: allocation.hpp  component_store.hpp  entity.hpp  generic_binding.hpp  index_table.hpp  registry.hpp  specific_binding.hpp
source/eecs/traits/: component.hpp
source/lumina/: core.hpp  ecs.hpp  events.hpp  lumina.hpp  render.hpp  renderer.hpp  system.hpp
source/lumina/core/: application.hpp  glfw.hpp  vulkan.hpp
source/lumina/ecs/: entity.hpp  entity.inl  index_table.hpp  iterator.hpp  iterator.inl  memory_pool.hpp  meta.hpp  registry.hpp  registry.inl  rules.hpp  set_functions.hpp  set_functions.inl  sparse_set.hpp  view.hpp  view.inl
source/lumina/events/: delegate.hpp  meta.hpp  multistream.hpp  socket.hpp  stream.hpp
source/lumina/framework/: information.hpp  standard.hpp
source/lumina/meta/: allocation.hpp  console.hpp  diff.hpp  empty_type.hpp  exceptions.hpp  extent.hpp  handle.hpp  index_table.hpp  pod_type.hpp  striding_iterator.hpp  type_index.hpp
source/lumina/render/: device.hpp  image.hpp  instance.hpp  physical_device.hpp  queue.hpp  surface.hpp  swapchain.hpp  window.hpp
source/lumina/render/meta/: resource.hpp
source/lumina/render/resources/: image.hpp  physical_device.hpp  queue.hpp
source/lumina/render/sync/: fence.hpp  semaphore.hpp  timeline_semaphore.hpp
source/lumina/render/systems/: application.hpp  device.hpp  instance.hpp  surface.hpp  swapchain.hpp  window.hpp
source/lumina/renderer/: connection.hpp  connection.impl.hpp  connection.inl  device.hpp  device.impl.hpp  device.inl  display_server.hpp  display_server.inl  glfw.hpp  handle.hpp  instance.hpp  instance.impl.hpp  instance.inl  logical_device.hpp  logical_device.inl  presenter.hpp  presenter.impl.hpp  presenter.inl  queue.hpp  queue.inl  surface.hpp  surface.inl  surface_manager.hpp  surface_manager.inl  swapchain.hpp  swapchain.inl  swapchain_manager.hpp  swapchain_manager.inl  vulkan.hpp  window.hpp  window.inl  window_manager.hpp  window_manager.inl
source/lumina/renderer/subsystems/: device.hpp  device.impl.hpp  presenter.hpp  presenter.impl.hpp
source/lumina/structs/: allocation.hpp  index_table.hpp  striding_iterator.hpp
source/lumina/system/: instance.hpp  instance.inl  window.hpp  window.inl  window_manager.hpp  window_manager.inl
source/lumina/traits/: empty_type.hpp  pod_type.hpp  type_index.hpp
source/vesta/: ecs.hpp
source/vesta/ecs/: access_policy.hpp  advance_policy.hpp  component_iterators.hpp  entity.hpp  registry.hpp  set_functions.hpp  view.hpp
source/vesta/iterators/: striding_iterator.hpp
source/vesta/structures/: allocation.hpp  index_table.hpp  striding_iterator.hpp
source/vesta/traits/: pod_type.hpp  tag_type.hpp  type_index.hpp
